// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: match > match { x: 1 } | { x: a } -> a 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?2",
      "Schema [ x: ?5 ] ~~ Schema [ x: Num ]",
      "?5 ~~ ?5",
      "?5 ~~ ?7",
    ],
    "term": "match Struct [ x: 1 ]
| Struct [ x: a ] -> a",
    "type": "?7",
  },
}
`;

exports[`inference: match > match { x: 1 } | { x: a } -> a 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "arg": {
              "row": {
                "label": "x",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "type": "Neutral",
                  "value": {
                    "type": "Var",
                    "variable": {
                      "lvl": 0,
                      "type": "Meta",
                      "val": 5,
                    },
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "arg": {
              "row": {
                "label": "x",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "lvl": 0,
        "right": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 7,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 4,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
      "7": {
        "ann": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 6,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 7,
        },
      },
    },
    "term": {
      "alternatives": [
        {
          "binders": [
            [
              "a",
              {
                "type": "Neutral",
                "value": {
                  "type": "Var",
                  "variable": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 5,
                  },
                },
              },
            ],
          ],
          "pattern": {
            "row": {
              "label": "x",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Binder",
                "value": "a",
              },
            },
            "type": "Struct",
          },
          "term": {
            "type": "Var",
            "variable": {
              "index": 0,
              "type": "Bound",
            },
          },
        },
      ],
      "scrutinee": {
        "arg": {
          "row": {
            "label": "x",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "Num",
                "value": 1,
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Struct",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
      "type": "Match",
    },
    "type": {
      "type": "Var",
      "variable": {
        "lvl": 0,
        "type": "Meta",
        "val": 7,
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: match > match 1 | 1 -> 2 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?2",
    ],
    "term": "match 1
| 1 -> 2",
    "type": "?2",
  },
}
`;

exports[`inference: match > match 1 | 1 -> 2 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
    },
    "term": {
      "alternatives": [
        {
          "binders": [],
          "pattern": {
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 1,
            },
          },
          "term": {
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 2,
            },
          },
        },
      ],
      "scrutinee": {
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "type": "Match",
    },
    "type": {
      "type": "Var",
      "variable": {
        "lvl": 0,
        "type": "Meta",
        "val": 2,
      },
    },
    "typedTerms": {},
  },
}
`;
